--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     background: url(clock.png) no-repeat;
    background-size: 100%;
    background-color: rgb(31, 95, 95);
-  
+  kerning: auto;
 
 }
 
